# hs-vix

./: README.md  vix.cabal
cbits/: hs_vix.c  hs_vix.h
src/System/VMware/: VIX.hs
src/System/VMware/VIX/: FFI.hsc
util/: error-codes.txt  gen-error-tbl.pl
