name:                vix
version:             0.0.0.0
synopsis:            VMware VIX bindings
description:
  This package provides fairly complete VMware VIX API bindings
  for Haskell.
homepage:            http://thoughtpolice.github.com/hs-vix
bug-reports:         http://github.com/thoughtpolice/hs-vix/issues
license:             MIT
license-file:        LICENSE.txt
copyright:           Copyright (c) Austin Seipp 2013,
author:              Austin Seipp <aseipp@pobox.com>
maintainer:          Austin Seipp <aseipp@pobox.com>
category:            System
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.4.2

extra-source-files:
  AUTHORS.txt README.md CONTRIBUTING.md CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/thoughtpolice/hs-vix.git

library
  exposed-modules:
    System.VMware.VIX
    System.VMware.VIX.FFI
  build-depends:
    base >= 4 && < 5,
    time

  c-sources: cbits/hs_vix.c
  include-dirs: /usr/include/vmware-vix/ cbits
  extra-lib-dirs: /usr/lib/vmware-vix/
  extra-libraries: vixAllProducts

  hs-source-dirs:     src
  ghc-options:        -Wall -O2 -fwarn-tabs
  default-language:   Haskell2010
